add user_enroll_events#update logics

--- a/app/views/events/_enroll_request.html.erb
+++ b/app/views/events/_enroll_request.html.erb
@@ -8,6 +8,7 @@
       <%= button_tag t(".enroll"), class: "btn button-text-default",
         id: "enroll_button" %>
     <% elsif current_user.enrolls.last == event %>
+      <%= hidden_field_tag :user_id, current_user.slug %>
       <%= button_tag t(".enrolling"), class: "button button-text",
         id: "unenroll_button" %>
     <% end %>
