--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -399,6 +399,7 @@ a[data-toggle="collapse"] {
 
 .button-text-default {
   border: 1px solid $body_gray;
+  height: 38px;
   @include button_text(12px, bold, $body_gray, 24px, uppercase);
 
   &:hover {
