fix event models and add user_enroll_events#index

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -111,6 +111,10 @@ a, a:hover, a:visited, a:active, a:link {
   line-height: 27px;
 }
 
+.no-border {
+  border: none;
+}
+
 .no-padding {
   padding: 0;
 }
