--- a/app/views/user_enroll_events/_requirement.html.erb
+++ b/app/views/user_enroll_events/_requirement.html.erb
@@ -8,7 +8,7 @@
     <% end %>
   <% end %>
 
-  <div class="event_requirements">
+  <div class="display_space_between">
     <div class="display_start">
       <%= req_verified? requirement %>
       <div class="pl-5px"><%= requirement.detail.name %></div>
