--- a/app/views/layouts/_page_submenu.html.erb
+++ b/app/views/layouts/_page_submenu.html.erb
@@ -1,8 +1,4 @@
 <li><%= link_to t(".latest"), "#" %></li>
 <li><%= link_to t(".most_popular"), "#" %></li>
 <li><%= link_to t(".enrolling"), "#" %></li>
-<% unless current_user.enrolls.empty? %>
-  <li><%= link_to t(".participating"),
-    user_enroll_event_path(event_id: current_user.enrolls.last) %></li>
-  <li><%= link_to t(".completed"), "#" %></li>
-<% end %>
+<li><%= link_to t(".my_courses"), user_enroll_events_path %></li>
