--- a/app/views/user_enroll_events/_participant.html.erb
+++ b/app/views/user_enroll_events/_participant.html.erb
@@ -14,13 +14,22 @@
   <% end %>
 
   <% unless current_user.Student? %>
-    <%= form_tag user_enroll_event_path(event_id: user_event), method: :patch,
-      remote: true, class: "p-10 d-flex align-items-center" do  %>
-      <%= hidden_field_tag "user_enroll_event[status]",
-        UserEnrollEvent.statuses.keys.second %>
-      <%= hidden_field_tag "user_id", user.slug %>
-      <%= button_tag t(".enroll"), class: "btn button-text-default",
-        type: :submit %>
+    <% enroll_status = user.check_enroll_status user_event %>
+    <%= hidden_field_tag "user_id", user.slug %>
+    <% if enroll_status == UserEnrollEvent.statuses.keys[1] %>
+      <%= form_tag user_enroll_event_path(event_id: user_event), method: :delete,
+        remote: true, class: "p-10 d-flex align-items-center" do  %>
+        <%= hidden_field_tag "user_enroll_event[status]", UserEnrollEvent.statuses.keys[0] %>
+        <%= button_tag t(".unenroll"), class: "btn button-text-default",
+          type: :submit %>
+      <% end %>
+    <% else %>
+      <%= form_tag user_enroll_event_path(event_id: user_event), method: :patch,
+        remote: true, class: "p-10 d-flex align-items-center" do  %>
+        <%= hidden_field_tag "user_enroll_event[status]", UserEnrollEvent.statuses.keys[1] %>
+        <%= button_tag t(".enroll"), class: "button button-text",
+          type: :submit %>
+      <% end %>
     <% end %>
   <% end %>
 <% end %>
