--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -18,7 +18,11 @@ $header_container_gray: #ececec;
   display: flex;
   justify-content: center;
   height: 117px;
-  img { width: 100% }
+
+  img {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 .course_title {
