--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,14 +1,27 @@
 <div class="container">
   <% Settings.model.event.sorted_by.keys.each do |filter| %>
+    <% next unless @filter.nil? || @filter == filter.to_s %>
     <% next if @events.try(filter).empty? %>
-    <div class="row no-margin justify-content-center mb-15">
+    <div class="row no-margin justify-content-start mb-15
+      border_bottom_events pb-15">
       <div>
-        <h3 class="mt-25"><%= t ".#{filter}" %></h3>
+        <h3 class="mt-15 mb-25"><%= t ".#{filter}" %></h3>
         <div id="<%= filter %>_courses">
           <%= render partial: "event", collection: @events.try(filter) %>
         </div>
-        <hr class="separate_course"/>
+
+        <% if @events.try(filter).total_count > Settings.model.event.per_page && @filter.nil? %>
+          <%= link_to t(".view_more"), root_path(filter: filter),
+            class: "view_more" %>
+        <% end %>
       </div>
+    </div>
+
+    <div class="row no-margin justify-content-center
+      <%= rescue_padding filter %>">
+      <% if @filter == filter.to_s %>
+        <%= paginate @events %>
+      <% end %>
     </div>
   <% end %>
 </div>
