--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,60 +1,114 @@
-<h2>Sign up</h2>
+<div class="row no-margin justify-content-center mt-15">
+  <h3 class="label-uppercase align-center"><%= t ".sign_up" %></h3>
+</div>
 
-<%= form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<%= form_for resource, as: resource_name,
+  url: registration_path(resource_name) do |f| %>
+  <%= render "users/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br/>
-    <%= f.text_field :name, autofocus: true %>
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.label :name, t(".name"), class: "mt-15" %><br />
+    </div>
+  </div>
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.text_field :name, autofocus: true, class: "input input_border_bottom" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br/>
-    <%= f.email_field :email %>
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.label :email, class: "mt-15" %><br />
+    </div>
+  </div>
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.email_field :email, class: "input input_border_bottom" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :code %><br/>
-    <%= f.text_field :code %>
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.label :code, t(".code"), class: "mt-15" %><br />
+    </div>
+  </div>
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.text_field :code, class: "input input_border_bottom" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :gender %> <br/>
-    <% User.genders.each do |key, value| %>
-      <%= f.radio_button :gender, key %>
-      <%= f.label :gender, key.capitalize, value: key %><br/>
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.label :gender, t(".gender"), class: "mt-15" %><br />
+      <% User.genders.each do |key, value| %>
+        <%= f.radio_button :gender, key %>
+        <%= f.label :gender, t(".#{key}"), value: key %>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.label :dob, t(".dob"), class: "mt-15" %><br />
+      <%= f.date_select :dob, {order: %i(day month year),
+        start_year: Date.today.year - Settings.model.user.year_interval,
+        end_year: Date.today.year, default: Date.today, autocomplete: :dob},
+        {class: "form-control d-inline-block w-auto fs-13px"} %>
+    </div>
+  </div>
+
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.label :phone, t(".phone"), class: "mt-15" %><br/>
+    </div>
+  </div>
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.text_field :phone, class: "input input_border_bottom" %>
+    </div>
+  </div>
+
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.label :password, t(".password"), class: "mt-15" %>
+      <% if @minimum_password_length %>
+        <em><%= t ".minimum_password_length",
+          number: @minimum_password_length %></em>
+      <% end %><br/>
+    </div>
+  </div>
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.password_field :password, autocomplete: "new-password",
+        class: "input input_border_bottom" %>
+    </div>
+  </div>
+
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.label :password_confirmation, t(".password_confirm"),
+        class: "mt-15" %><br/>
+    </div>
+  </div>
+  <div class="row no-margin justify-content-center">
+    <div class="col-md-3">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password",
+        class: "input input_border_bottom" %>
+    </div>
+  </div>
+
+  <div class="row no-margin justify-content-center my-15">
+    <div class="col-md-3">
+      <%= link_to t(".new_confirmation"), new_confirmation_path(resource_name) %><br />
+    </div>
+  </div>
+
+  <div class="row no-margin justify-content-center mb-100">
+    <%= f.submit t(".sign_up"), class: "button mx-15" %>
+    <%= link_to new_user_session_path, class: "btn button-text-default mx-15" do %>
+      <%= t ".log_in" %>
     <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :dob, "Date of Birth" %><br/>
-    <%= f.date_select :dob, order: %i(day month year),
-      start_year: Settings.model.user.start_dob_year,
-      end_year: Settings.model.user.start_dob_year + Settings.model.user.year_interval,
-      default: Date.today, autocomplete: :dob %>
-  </div>
-
-  <div class="field">
-    <%= f.label :phone %><br/>
-    <%= f.text_field :phone %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br/>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br/>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
 <% end %>
-
-<%= render "users/shared/links" %>
