fix seeds.rb, routes.rb and events thumbnail views

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -24,8 +24,8 @@ $page_link_border_gray: #dee2e6;
   height: 117px;
 
   img {
-    height: 100%;
-    width: 100%;
+    max-height: 117px;
+    max-width: 203px;
   }
 }
 
