fix user_enroll_event#show authorization and requirement_collection

--- a/app/views/user_enroll_events/_participant.html.erb
+++ b/app/views/user_enroll_events/_participant.html.erb
@@ -10,6 +10,7 @@
       <%= user_image_for user, "user_image_small" %>
       <div class="user_title"><%= user.name %></div>
     </div>
+    <%= hidden_field_tag "event_id", user_event.slug %>
     <%= button_tag type: :submit, hidden: true, id: user.slug %>
   <% end %>
 
