fix latest courses in events#show; enroll_request; user_enroll_events_controller; events_controller

--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -35,6 +35,11 @@ $body_gray: #6c6a74;
   width: 100%;
 }
 
+.medium_thumbnail {
+  max-height: 82.2px;
+  max-width: 146.22px;
+}
+
 .tab_panels {
   z-index: 7;
 }
