--- a/app/views/events/_enroll_request.html.erb
+++ b/app/views/events/_enroll_request.html.erb
@@ -3,7 +3,8 @@
     <%= link_to user_enroll_event_path event do %>
       <div class="btn btn-success button-text"><%= t ".assigned" %></div>
     <% end %>
-  <% elsif can? :create, UserEnrollEvent %>
+  <% elsif !current_user.enrolling? || current_user.find_enroll(event,
+    UserEnrollEvent.statuses.values[0]) %>
     <% enroll_status = current_user.check_enroll_status event %>
     <% css_status = rescue_enroll_status enroll_status %>
 
