--- a/app/views/user_enroll_events/_event_statuses.html.erb
+++ b/app/views/user_enroll_events/_event_statuses.html.erb
@@ -1,8 +1,4 @@
 <% Event.statuses.each do |key, value| %>
-  <% if value.zero? %>
-    <% next unless current_user.Staff? || current_user.Manager? %>
-    <%= button_tag t(".#{key}"), class: "#{rescue_publish_status value}" %>
-  <% else %>
-    <%= button_tag t(".#{key}"), class: "#{rescue_publish_status value}" %>
-  <% end %>
+  <% next if current_user.Student? && value.zero? %>
+  <%= button_tag t(".#{key}"), class: "#{rescue_publish_status value}" %>
 <% end %>
