--- a/app/views/user_enroll_events/_filtered_events.html.erb
+++ b/app/views/user_enroll_events/_filtered_events.html.erb
@@ -1,12 +1,6 @@
 <% Event.statuses.each do |key, value| %>
-  <% if value.zero? %>
-    <% next unless current_user.Staff? || current_user.Manager? %>
-    <div class="tab_panel no-border no-padding <%= rescue_active_panel value %>">
-      <%= render partial: "user_event", collection: user_events.try(key) %>
-    </div>
-  <% else %>
-    <div class="tab_panel no-border no-padding <%= rescue_active_panel value %>">
-      <%= render partial: "user_event", collection: user_events.try(key) %>
-    </div>
-  <% end %>
+  <% next if current_user.Student? && value.zero? %>
+  <div class="tab_panel no-border no-padding <%= rescue_active_panel value %>">
+    <%= render partial: "user_event", collection: user_events.try(key) %>
+  </div>
 <% end %>
