1. Validate grade 2. Modify search view

--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -35,6 +35,12 @@ $body_gray: #6c6a74;
   width: 100%;
 }
 
+.large_thumbnail {
+  max-height: 121px;
+  max-width: 215px;
+}
+
+
 .medium_thumbnail {
   max-height: 82.2px;
   max-width: 146.22px;
