add real-time delete message

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div class="media-body">
+<div id="message_<%= message.id %>" class="media-body">
   <h5 class="media-heading"><%= message.user.name %>
     <small class="text-muted"><%= format_message_time message %></small>
     <small>
