--- a/app/views/messages/_index.html.erb
+++ b/app/views/messages/_index.html.erb
@@ -1,4 +1,4 @@
-<div id="messages" data-sender-id="<%= current_user.id %>"
+<div id="messages" data-sender-id="<%= current_user.slug %>"
   data-conversation-id="<%= message.conversation_id %>">
   <%= render conversation.messages.reject(&:new_record?) %>
 </div>
