--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,12 +1,11 @@
-<div id="message_<%= message.id %>" class="media-body">
+<div id="message_<%= message.id %>" class="message_detail"
+  data-message-user-id="<%= message.user.slug %>">
   <h5 class="media-heading"><%= message.user.name %>
     <small class="text-muted"><%= format_message_time message %></small>
-    <small>
-      <% if can? :destroy, message %>
-        <%= form_for message, url: conversation_message_path(conversation_id:
-          message.conversation, id: message), method: :delete, remote: true do |f| %>
-          <%= f.submit t(".delete"), class: "btn btn-primary pull-right" %>
-        <% end %>
+    <small class="destroy_message">
+      <%= form_for message, url: conversation_message_path(conversation_id:
+        message.conversation, id: message), method: :delete, remote: true do |f| %>
+        <%= f.submit t(".delete"), class: "btn btn-primary pull-right" %>
       <% end %>
     </small>
   </h5>
