--- a/app/views/user_enroll_events/show.html.erb
+++ b/app/views/user_enroll_events/show.html.erb
@@ -1,5 +1,7 @@
 <% raise CanCan::AccessDenied unless can? :read, current_user.find_enroll(@user_event) %>
 
+<%= hidden_field_tag :event_id, @user_event.id %>
+<%= hidden_field_tag :current_user_id, current_user.id %>
 <div class="content_detail pt-17">
   <div class="container">
     <div class="d-flex justify-content-between align-items-center">
