--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -76,6 +76,7 @@ a, a:hover, a:visited, a:active, a:link {
 
 .separate_course {
   border-top: 1.2px solid $body_gray;
+  width: 100%;
 }
 
 .input {
@@ -231,6 +232,10 @@ a, a:hover, a:visited, a:active, a:link {
 
 .mt-15 {
   margin-top: 15px;
+}
+
+.mb-129:not(:last-child) {
+  margin-bottom: 129px;
 }
 
 .mb-100 {
