refactor requirements view

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -156,6 +156,10 @@ a, a:hover, a:visited, a:active, a:link {
   padding-right: 15px;
 }
 
+.pr-10 {
+  padding-right: 10px;
+}
+
 .pr-0 {
   padding-right: 0;
 }
