--- a/app/views/requirements/_options.html.erb
+++ b/app/views/requirements/_options.html.erb
@@ -3,8 +3,8 @@
     aria-haspopup="true" aria-expanded="false"></div>
   <div class="dropdown-menu">
     <%= label_tag requirement.images[image_counter].id,
-      t(".change"), class: "dropdown-item" %>
+      t(".change"), class: "dropdown-item no-margin" %>
     <%= label_tag "#{requirement.images[image_counter].id}_destroy",
-      t(".delete"), class: "dropdown-item" %>
+      t(".delete"), class: "dropdown-item no-margin" %>
   </div>
 </div>
