--- a/app/views/requirements/_status.html.erb
+++ b/app/views/requirements/_status.html.erb
@@ -4,7 +4,9 @@
       <%= req_verified? requirement.verified? %>
       <div class="pl-5px"><%= requirement.detail.name %></div>
     </div>
-    <div><%= t ".deadline" %>: <%= rescue_req_deadline requirement %></div>
+    <div class="pr-10">
+      <%= t ".deadline" %>: <%= rescue_req_deadline requirement %>
+    </div>
   </div>
 
   <div class="req_description"><%= requirement.detail.description %></div>
