--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -100,6 +100,12 @@ $body_gray: #6c6a74;
   width: 51px;
 }
 
+.user_image_x_small {
+  border-radius: 13px;
+  height: 26px;
+  width: 26px;
+}
+
 .user_title {
   margin-left: 15px;
 
