--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -168,6 +168,10 @@ a, a:hover, a:visited, a:active, a:link {
   padding-top: 68.33px;
 }
 
+.pt-20 {
+  padding-top: 20px;
+}
+
 .pt-17 {
   padding-top: 17px;
 }
