add ajax and confirmation to participants

--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -101,6 +101,12 @@ $body_gray: #6c6a74;
 }
 
 .user_image_x_small {
+  border-radius: 16px;
+  height: 32px;
+  width: 32px;
+}
+
+.user_image_xx_small {
   border-radius: 13px;
   height: 26px;
   width: 26px;
