--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -286,6 +286,10 @@ a, a:hover, a:visited, a:active, a:link {
   margin-right: 5px;
 }
 
+.mr-15 {
+  margin-right: 15px;
+}
+
 .mr-42 {
   margin-right: 42px;
 }
