--- a/app/views/user_enroll_events/_participant.html.erb
+++ b/app/views/user_enroll_events/_participant.html.erb
@@ -1,37 +1,49 @@
-<% unless user_counter.zero? %>
-  <hr class="no-margin" />
-<% end %>
-
-<%= label_tag user.slug, class: "no-margin cursor_pointer d-flex flex-nowrap
-  participant justify-content-between" do %>
+<%= label_tag user.slug, class: "no-margin display_space_between",
+  id: "participant_#{user.id}" do %>
   <%= form_tag conversations_path(sender_id: current_user, receiver_id: user),
     remote: true, class: "p-10" do  %>
     <div class="course_feature no-margin justify-content-start">
-      <%= user_image_for user, "user_image_small" %>
+      <div class="mr-15"><%= req_verified? is_enrolled?(user, user_event) %></div>
+      <%= user_image_for user, "user_image_x_small" %>
       <div class="user_title"><%= user.name %></div>
     </div>
-    <%= hidden_field_tag "event_id", user_event.slug %>
-    <%= button_tag type: :submit, hidden: true, id: user.slug %>
+    <%= hidden_field_tag "event_slug", user_event.slug %>
+    <%= button_tag "", type: :submit, hidden: true, id: user.slug %>
   <% end %>
 
-  <% unless current_user.Student? %>
-    <% enroll_status = user.check_enroll_status user_event %>
-    <% if enroll_status == UserEnrollEvent.statuses.keys[1] %>
-      <%= form_tag user_enroll_event_path(event_id: user_event), method: :delete,
-        remote: true, class: "p-10 d-flex align-items-center" do  %>
-        <%= hidden_field_tag "user_enroll_event[status]", UserEnrollEvent.statuses.keys[0] %>
-        <%= hidden_field_tag "user_id", user.slug %>
-        <%= button_tag t(".decline"), class: "btn button-text-default",
-          type: :submit %>
-      <% end %>
+  <% if can? :update, user_event %>
+    <%= hidden_field_tag "user_slug", user.slug %>
+
+    <% if is_enrolled? user, user_event %>
+      <%= hidden_field_tag "user_enroll_event[status]",
+        UserEnrollEvent.statuses.keys[0] %>
+      <%= button_tag t(".remove"), class: "remove_participants",
+        id: "remove_participant_#{user.id}", hidden: true %>
+
+      <div class="three_dots_container order-0">
+        <div class="three_dots_option" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false"></div>
+        <div class="dropdown-menu">
+          <%= label_tag "remove_participant_#{user.id}", t(".remove"),
+            class: "dropdown-item no-margin" %>
+        </div>
+      </div>
     <% else %>
-      <%= form_tag user_enroll_event_path(event_id: user_event), method: :patch,
-        remote: true, class: "p-10 d-flex align-items-center" do  %>
-        <%= hidden_field_tag "user_enroll_event[status]", UserEnrollEvent.statuses.keys[1] %>
-        <%= hidden_field_tag "user_id", user.slug %>
-        <%= button_tag t(".approve"), class: "button button-text",
-          type: :submit %>
-      <% end %>
+      <%= hidden_field_tag "user_enroll_event[status]",
+        UserEnrollEvent.statuses.keys[1] %>
+      <%= button_tag t(".add"), class: "add_participants",
+        id: "add_participant_#{user.id}", hidden: true %>
+
+      <div class="three_dots_container order-0">
+        <div class="three_dots_option" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false"></div>
+        <div class="dropdown-menu">
+          <%= label_tag "add_participant_#{user.id}", t(".add"),
+            class: "dropdown-item no-margin" %>
+        </div>
+      </div>
     <% end %>
   <% end %>
 <% end %>
+
+<hr class="no-margin" />
